# KnowledgeBase

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  run.py  server.py
scripts/: download_models.py
src/: __init__.py  config.py
src/api/: __init__.py  knowledge.py
src/knowledge/: __init__.py  builder.py
src/services/: __init__.py
src/services/embedding/: __init__.py  service.py
src/services/import_/: __init__.py  importer.py  models.py
src/services/search/: __init__.py  vector_searcher.py
src/services/vector/: __init__.py  backend.py  batch_optimizer.py  chunker.py  compute.py  multiprocess.py  queue.py  store.py
src/services/vector/backends/: __init__.py  faiss_backend.py
src/utils/: gpu_memory.py
static/: index.html
static/css/: chat.css
static/js/: chat.js
tools/: generate_form_description.py  json_to_md.py
